--- a/_posts/2015-08-17-1.md
+++ b/_posts/2015-08-17-1.md
@@ -2,7 +2,9 @@
 layout:				post
 title:				"subtitle in post's liquid"
 badge_color:		warning
-badge_icon:			check
+badge_icon:			road
 ---
 
 GO Hillsborough begins its [Integrating Project Specifics](http://gohillsborough.org/project-specifics/) meeting series.
+
+<img src="{{ site.baseurl }}/images/gohills-logo.jpg" class="img-responsive center-block">
