post links and remove js margin manipulations

--- a/_posts/2013-05-22-1.md
+++ b/_posts/2013-05-22-1.md
@@ -4,7 +4,9 @@ badge_color:
 badge_icon:			
 ---
 
-TED Policy Leadership Group has its initial meeting with facilitator Herb Marlowe and “purpose is to set strategy for transportation” initiatives.  The Policy Leadership Group is made up of all seven county commissioners; the mayors of Tampa, Temple Terrace and Plant City; and the chair of Hillsborough Area Regional Transit Authority (HART).  (<a href="http://65.49.32.144/Hillsborough/7253585a-c22d-4af8-a4c9-58111a6a7021/Econ_Econ_Policy_Group_Mtg_05_22_2013_PM/presentation_file/mgpresenter.html?Stream=low">Link</a>)
+TED Policy Leadership Group has its initial meeting with facilitator Herb Marlowe and “purpose is to set strategy for transportation” initiatives.  The Policy Leadership Group is made up of all seven county commissioners; the mayors of Tampa, Temple Terrace and Plant City; and the chair of Hillsborough Area Regional Transit Authority (HART).
+
+* [Video](http://65.49.32.144/Hillsborough/7253585a-c22d-4af8-a4c9-58111a6a7021/Econ_Econ_Policy_Group_Mtg_05_22_2013_PM/presentation_file/mgpresenter.html?Stream=low)
 
 <hr>
 
