--- a/_posts/2015-01-14-1.md
+++ b/_posts/2015-01-14-1.md
@@ -4,4 +4,6 @@ badge_color:
 badge_icon:			
 ---
 
-Policy Leadership Group receives a presentation from George Walton, Parsons Brinckerhoff, providing a technical work update and the outline for public engagement to include 28 public workshop meetings. Policy Leadership Group directs staff to add eight (8) additional workshop meetings in the community.  Mike Merrill advises that with the change in scope, there will be additional costs.  Merrill will be bringing a budget amendment to the BOCC to take leftover ERP funds to use for GO Hillsborough  http://65.49.32.144/Hillsborough/3057a3f2-a609-4545-8e27-afe290fdbaff/Trans_Econ_Dev_WS_1_14_2015/presentation_file/mgpresenter.html?Stream=low (1:08:53 in to the video)
+Policy Leadership Group receives a presentation from George Walton, Parsons Brinckerhoff, providing a technical work update and the outline for public engagement to include 28 public workshop meetings. Policy Leadership Group directs staff to add eight (8) additional workshop meetings in the community.  Mike Merrill advises that with the change in scope, there will be additional costs.  Merrill will be bringing a budget amendment to the BOCC to take leftover ERP funds to use for GO Hillsborough [(1:08:53 in to the video)][video]
+
+[video]: http://65.49.32.144/Hillsborough/3057a3f2-a609-4545-8e27-afe290fdbaff/Trans_Econ_Dev_WS_1_14_2015/presentation_file/mgpresenter.html?Stream=low
