--- a/_posts/2015-01-22-1.md
+++ b/_posts/2015-01-22-1.md
@@ -6,4 +6,4 @@ badge_icon:			usd
 
 BOCC approves additional funding for the Transportation Initiative.  The budget amendment moves $500,000 from the ERP Financial System Replacement project to the Public Works Department's operating budget for additional services for the Hillsborough County Transportation Initiative for the Hillsborough County Leadership Group (PLG). This increased the amount of Parsons Brinckerhoff work order from $498,541.08 to a total of $950,686.56.
 
-http://agenda.hillsboroughcounty.org/cache/00003/558/A-29.PDF
+* [Agenda](http://agenda.hillsboroughcounty.org/cache/00003/558/A-29.PDF)
