--- a/_posts/2015-02-18-1.md
+++ b/_posts/2015-02-18-1.md
@@ -6,4 +6,4 @@ badge_icon:
 
 Commissioner Al Higginbotham requests Internal Auditor come and discuss Go Hillsborough public input audit.
 
-http://agenda.hillsboroughcounty.org/cache/00003/564/F-3.PDF 
+* [Agenda](http://agenda.hillsboroughcounty.org/cache/00003/564/F-3.PDF)
