--- a/_posts/2015-03-04-1.md
+++ b/_posts/2015-03-04-1.md
@@ -6,4 +6,4 @@ badge_icon:
 
 BOCC receives a report from the County Internal Auditor and the Clerk’s Audit Department proposing a scope of work for an audit of GO Hillsborough public input.
 
-http://agenda.hillsboroughcounty.org/cache/00003/567/03-04%20FINAL%20Agenda.pdf
+* [Agenda](http://agenda.hillsboroughcounty.org/cache/00003/567/03-04%20FINAL%20Agenda.pdf)
