--- a/_posts/2015-06-11-1.md
+++ b/_posts/2015-06-11-1.md
@@ -6,6 +6,4 @@ badge_icon:
 
 Policy Leadership Group receives the Community Transportation Plan Findings and Recommendations from Parsons Brinckerhoff.
 
-[video][video] 
-
-[video]: http://65.49.32.144/Hillsborough/820ebde3-9117-4126-9ee3-8a2b68258fd6/Trans_Econ_Dev_06_11_2015/presentation_file/mgpresenter.html?Stream=low
+* [Video](http://65.49.32.144/Hillsborough/820ebde3-9117-4126-9ee3-8a2b68258fd6/Trans_Econ_Dev_06_11_2015/presentation_file/mgpresenter.html?Stream=low)
