--- a/_posts/2013-05-15-1.md
+++ b/_posts/2013-05-15-1.md
@@ -1,7 +1,7 @@
 ---
 layout:				post
 badge_color:		
-badge_icon:			
+badge_icon:			check
 ---
 
 Board of County Commissioners formally adopt the County Strategic Plan which places emphasis on Economic Development, Business Recruitment/Retention, Job Growth and Prosperity
