--- a/_posts/2015-02-18-1.md
+++ b/_posts/2015-02-18-1.md
@@ -1,7 +1,7 @@
 ---
 layout:				post
-badge_color:		
-badge_icon:			
+badge_color:		warning
+badge_icon:			search
 ---
 
 Commissioner Al Higginbotham requests Internal Auditor come and discuss Go Hillsborough public input audit.
