--- a/_posts/2015-03-02-1.md
+++ b/_posts/2015-03-02-1.md
@@ -1,7 +1,7 @@
 ---
 layout:				post
-badge_color:		
-badge_icon:			
+badge_color:		default
+badge_icon:			file-text-o
 ---
 
 Upon request by County Administrator Mike Merrill, the County Supervisor of Elections begins collecting all Go Hillsborough comment forms at public meetings.  The SOE maintains custody and provides scans of all documents during the process to ensure security  and transparency.
