--- a/_posts/2015-03-04-1.md
+++ b/_posts/2015-03-04-1.md
@@ -1,7 +1,7 @@
 ---
 layout:				post
-badge_color:		
-badge_icon:			
+badge_color:		warning
+badge_icon:			search
 ---
 
 BOCC receives a report from the County Internal Auditor and the Clerk’s Audit Department proposing a scope of work for an audit of GO Hillsborough public input.
