--- a/_posts/2015-03-12-1.md
+++ b/_posts/2015-03-12-1.md
@@ -1,7 +1,7 @@
 ---
 layout:				post
-badge_color:		
-badge_icon:			
+badge_color:		warning
+badge_icon:			search
 ---
 
 County Audit Department Director requests formal closure of a citizen-based complaint about the selection of Parsons Brinckerhoff due to "no material concerns" being identified and no further review required. (link)
