--- a/_posts/2015-07-15-1.md
+++ b/_posts/2015-07-15-1.md
@@ -1,7 +1,7 @@
 ---
 layout:				post
-badge_color:		
-badge_icon:			
+badge_color:		warning
+badge_icon:			search
 ---
 
 County Audit final report on review of Go Hillsborough comment methods finds majority of comments were recorded accurately and completely, with minor clerical errors corrected by Parsons Brinckerhoff and no material concerns. (link to Auditor Final Testing memo) 
