--- a/_posts/2015-08-17-1.md
+++ b/_posts/2015-08-17-1.md
@@ -1,7 +1,7 @@
 ---
 layout:				post
 title:				"subtitle in post's liquid"
-badge_color:		warning
+badge_color:		default
 badge_icon:			road
 ---
 
