--- a/_posts/2013-12-02-1.md
+++ b/_posts/2013-12-02-1.md
@@ -4,7 +4,7 @@ badge_color:
 badge_icon:			
 ---
 
-Transportation for Economic Development  holds a total of five community conversations (total of five) throughout the county with facilitator Herb Marlowe Public Engagement series with links below:
+Transportation for Economic Development holds a total of five community conversations (total of five) throughout the county with facilitator Herb Marlowe Public Engagement series:
 
 <div class="embed-responsive embed-responsive-16by9">
 	<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/7KH17jekX94?rel=0" frameborder="0" allowfullscreen></iframe>
