--- a/_posts/2015-07-16-1.md
+++ b/_posts/2015-07-16-1.md
@@ -1,7 +1,7 @@
 ---
 layout:				post
 badge_color:		
-badge_icon:			
+badge_icon:			check
 ---
 
 Policy Leadership Group accepts the GO Hillsborough Community Transportation Plan Findings and Recommendations
