--- a/_posts/2013-10-09-0.md
+++ b/_posts/2013-10-09-0.md
@@ -3,7 +3,10 @@ layout: post
 subtitle: TED PLG Workshop
 ---
 
-* Discussion on the Florida Department of Transportation perspective on regional transportation interconnectivity.
+Discussion on the Florida Department of Transportation perspective on regional transportation interconnectivity.
+
+<a class="btn btn-block btn-primary" href="{{ site.baseurl }}/modals/2013-10-09-fdot-pres" data-toggle="modal" data-target="#defaultModal">FDOT Presentation</a>
+
+
 * [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/9554 )
-* [Presentation - Florida Department of Transportation Perspectives by Paul Steinman, FDOT](http://www.hillsboroughcounty.org/DocumentCenter/View/9774 )
 * [Watch video](http://65.49.32.144/Hillsborough/acd4ac46-c3ad-4f02-be24-e3375af9914e/Trans_Econ_Dev_WS_10_09_2013/presentation_file/mgpresenter.html?Stream=low)
