--- a/_posts/2015-03-12-0.md
+++ b/_posts/2015-03-12-0.md
@@ -1,5 +1,7 @@
 ---
 layout: post
+badge_color: warning
+badge_icon: search
 ---
 
 * County Auditor Completes Assessment of Parsons Brinckerhoff Procurement 
