--- a/_posts/2015-09-16-0.md
+++ b/_posts/2015-09-16-0.md
@@ -1,5 +1,7 @@
 ---
 layout: post
+badge_color: warning
+badge_icon: search
 ---
 
 * Hillsborough County Commissioners Request GO Hillsborough Audit
