--- a/_posts/2013-11-04-0.md
+++ b/_posts/2013-11-04-0.md
@@ -2,7 +2,8 @@
 layout: post
 ---
 
-* TED Community Conversation Meeting at Strawberry Crest High School
+TED Community Conversation Meeting at Strawberry Crest High School
+
 
 <div class="embed-responsive embed-responsive-16by9">
 <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/xn8-cf_O9g0?rel=0" frameborder="0" allowfullscreen></iframe>
