--- a/_posts/2014-09-25-0.md
+++ b/_posts/2014-09-25-0.md
@@ -6,4 +6,4 @@ badge_icon: usd
 
 * Initial Work Order Issued for Parson Brinckerhoff 
 * A $53,234 work order PWGC20140011 is issued by Hillsborough County Public Works Department for work by Parsons Brinckerhoff to continue initial transportation plan development and participate in meetings.
-* [Work Order -](http://www.hillsboroughcounty.org/DocumentCenter/View/16759 )
+* [Work Order](http://www.hillsboroughcounty.org/DocumentCenter/View/16759 )
