--- a/_posts/2015-06-11-0.md
+++ b/_posts/2015-06-11-0.md
@@ -8,5 +8,5 @@ subtitle: TED PLG Workshop
 * PLG receives the Community Transportation Plan Findings and Recommendations from Parsons Brinckerhoff. One-half percent sales tax is presented as the funding option with the majority of public support. 
 * [Agenda](http://agenda.hillsboroughcounty.org/cache/00003/596/Policy%20Leadership%20Agenda%20061115.pdf )
 * [Presentation – Findings and Recommendations by Bob Clifford, Parsons Brinckerhoff](http://gohillsborough.org/wp-content/uploads/2014/12/Presentation-for-PLG-June-11-FINAL.pdf )
-* [Community Transportation Plan -](http://gohillsborough.org/wp-content/uploads/2015/06/GO-Hillsborough_Community-Transportation-Plan_06-2015.pdf )
+* [Community Transportation Plan](http://gohillsborough.org/wp-content/uploads/2015/06/GO-Hillsborough_Community-Transportation-Plan_06-2015.pdf )
 * [Watch video](http://65.49.32.144/Hillsborough/820ebde3-9117-4126-9ee3-8a2b68258fd6/Trans_Econ_Dev_06_11_2015/presentation_file/mgpresenter.html?Stream=low  )
