--- a/_posts/2014-11-26-0.md
+++ b/_posts/2014-11-26-0.md
@@ -6,4 +6,4 @@ badge_icon: usd
 
 * Additional Funding for the Transportation Initiative 
 * Parsons Brinckerhoff work order is increased to $498,491.15 under County Administrator authority to support data collection and analysis, public engagement, and public meetings, including support by subconsultants Jacobs Engineering and The Leytham Group. 
-* [Work Order Revision #1 -](http://www.hillsboroughcounty.org/DocumentCenter/View/16763 )
+* [Work Order Revision #1](http://www.hillsboroughcounty.org/DocumentCenter/View/16763 )
