link targets and final jumbo bg

--- a/_posts/2013-05-15-0.md
+++ b/_posts/2013-05-15-0.md
@@ -4,6 +4,6 @@ layout: post
 
 * BOCC Adopts County Strategic Plan
 * Adopted Strategic Plan emphasizes Economic Development, Business Recruitment/Retention, Job Growth and Prosperity (Agenda Item B-11). The plan initiates the formation of what will become Transportation for Economic Development (TED) in Hillsborough County Policy Leadership Group.
-* [BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/363/05-15%20Recap%20Memo.pdf)
-* [Strategic Plan](http://www.hillsboroughcounty.org/index.aspx?nid=3070 )
-* [Watch video](http://65.49.32.144/Hillsborough/eeba8991-744f-485e-983c-6dae8c4f6b00/BOCC_Reg_Mtg_05_15_2013_PM/presentation_file/mgpresenter.html?Stream=low )
+* [BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/363/05-15%20Recap%20Memo.pdf){:target='_blank'}
+* [Strategic Plan](http://www.hillsboroughcounty.org/index.aspx?nid=3070){:target='_blank'}
+* [Watch video](http://65.49.32.144/Hillsborough/eeba8991-744f-485e-983c-6dae8c4f6b00/BOCC_Reg_Mtg_05_15_2013_PM/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
