--- a/_posts/2013-07-23-0.md
+++ b/_posts/2013-07-23-0.md
@@ -7,5 +7,5 @@ subtitle: TED PLG Workshop
 
 Discussion with business leaders on the transportation infrastructure that is needed for business development and job growth.
 
-* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/16806 )
-* [Watch video](http://65.49.32.144/Hillsborough/81704493-df20-4417-b0c8-47fc1db2a94b/Policy__Leadeship_Grp_WS_07_23_2013/presentation_file/mgpresenter.html?Stream=low)
+* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/16806){:target='_blank'}
+* [Watch video](http://65.49.32.144/Hillsborough/81704493-df20-4417-b0c8-47fc1db2a94b/Policy__Leadeship_Grp_WS_07_23_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
