--- a/_posts/2013-10-09-0.md
+++ b/_posts/2013-10-09-0.md
@@ -10,5 +10,5 @@ Discussion on the Florida Department of Transportation perspective on regional t
 <a class="btn btn-block btn-primary" href="{{ site.baseurl }}/modals/2013-10-09-fdot-pres" data-toggle="modal" data-target="#defaultModal">FDOT Presentation</a>
 
 
-* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/9554 )
-* [Watch video](http://65.49.32.144/Hillsborough/acd4ac46-c3ad-4f02-be24-e3375af9914e/Trans_Econ_Dev_WS_10_09_2013/presentation_file/mgpresenter.html?Stream=low)
+* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/9554){:target='_blank'}
+* [Watch video](http://65.49.32.144/Hillsborough/acd4ac46-c3ad-4f02-be24-e3375af9914e/Trans_Econ_Dev_WS_10_09_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
