--- a/_posts/2014-02-26-0.md
+++ b/_posts/2014-02-26-0.md
@@ -6,7 +6,7 @@ subtitle: TED PLG Workshop
 ---
 
 * Discussion on Key Economic Spaces, governance, and public engagement strategy.
-* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/11195 )
-* [Presentation - Review of Key Economic Spaces, clarification of FDOT/TBARTA “Spine,” and update on Competitive Sites Process by Mike Williams, Hillsborough County Transportation Planning and Development, and Jean Duncan, City of Tampa Transportation ](http://www.hillsboroughcounty.org/DocumentCenter/View/11194 )
-* [Presentation - Legal Considerations for Governance by Chip Fletcher, Hillsborough County Attorney](http://www.hillsboroughcounty.org/DocumentCenter/View/11192 )
-* [Presentation - Public Engagement Options by Eric Johnson, Hillsborough County Strategic Planning](http://65.49.32.144/Hillsborough/a6bda8fa-40d9-4aac-830b-8d5f0c88e888/Trans_Econ_Dev_WS_2_26_2014/presentation_file/mgpresenter.html?Stream=low  )
+* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/11195){:target='_blank'}
+* [Presentation - Review of Key Economic Spaces, clarification of FDOT/TBARTA “Spine,” and update on Competitive Sites Process by Mike Williams, Hillsborough County Transportation Planning and Development, and Jean Duncan, City of Tampa Transportation ](http://www.hillsboroughcounty.org/DocumentCenter/View/11194){:target='_blank'}
+* [Presentation - Legal Considerations for Governance by Chip Fletcher, Hillsborough County Attorney](http://www.hillsboroughcounty.org/DocumentCenter/View/11192){:target='_blank'}
+* [Presentation - Public Engagement Options by Eric Johnson, Hillsborough County Strategic Planning](http://65.49.32.144/Hillsborough/a6bda8fa-40d9-4aac-830b-8d5f0c88e888/Trans_Econ_Dev_WS_2_26_2014/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
