--- a/_posts/2014-03-26-0.md
+++ b/_posts/2014-03-26-0.md
@@ -6,10 +6,10 @@ subtitle: TED PLG Workshop
 ---
 
 * Discussion on the TED overview, governance, and public engagement approach. PLG recommends staff hires a professional public relations firm to assist with specialized public engagement tasks, such as polling.
-* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/11299 )
-* [Presentation - Delivering Intermodal Transportation Solutions for Hillsborough County by Mike Merrill, Hillsborough County Administrator](http://www.hillsboroughcounty.org/DocumentCenter/View/11604 )
-* [Presentation – Managing Transportation in Other Communities by Herb Marlowe, consultant, and Eric Johnson, Hillsborough County Strategic Planning](http://www.hillsboroughcounty.org/DocumentCenter/View/11325 )
-* [Presentation - Approaches to Public Engagement by Herb Marlowe, consultant  ](http://www.hillsboroughcounty.org/DocumentCenter/View/11326 )
-* [Presentation - Update on Competitive Sites Process by Lucia Garsys, Hillsborough County](http://www.hillsboroughcounty.org/DocumentCenter/View/11354 )
-* [Potential Project List for Key Economic Spaces](http://www.hillsboroughcounty.org/DocumentCenter/View/11353 )
-* [Watch video](http://65.49.32.144/Hillsborough/2f4b11e1-7663-4185-81de-a6ae6de8d460/Trans_Econ_Dev_WS_3_26_2014/presentation_file/mgpresenter.html?Stream=low )
+* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/11299){:target='_blank'}
+* [Presentation - Delivering Intermodal Transportation Solutions for Hillsborough County by Mike Merrill, Hillsborough County Administrator](http://www.hillsboroughcounty.org/DocumentCenter/View/11604){:target='_blank'}
+* [Presentation – Managing Transportation in Other Communities by Herb Marlowe, consultant, and Eric Johnson, Hillsborough County Strategic Planning](http://www.hillsboroughcounty.org/DocumentCenter/View/11325){:target='_blank'}
+* [Presentation - Approaches to Public Engagement by Herb Marlowe, consultant  ](http://www.hillsboroughcounty.org/DocumentCenter/View/11326){:target='_blank'}
+* [Presentation - Update on Competitive Sites Process by Lucia Garsys, Hillsborough County](http://www.hillsboroughcounty.org/DocumentCenter/View/11354){:target='_blank'}
+* [Potential Project List for Key Economic Spaces](http://www.hillsboroughcounty.org/DocumentCenter/View/11353){:target='_blank'}
+* [Watch video](http://65.49.32.144/Hillsborough/2f4b11e1-7663-4185-81de-a6ae6de8d460/Trans_Econ_Dev_WS_3_26_2014/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
