--- a/_posts/2014-05-12-0.md
+++ b/_posts/2014-05-12-0.md
@@ -4,4 +4,4 @@ layout: post
 
 * Two-year CCNA Contract Renewed 
 * Administrative renewal by Hillsborough County Public Works Department of contract for 10 firms selected to provide various Professional Miscellaneous Engineering services to the County from June 8, 2014 to June 7, 2016
-* [2014 CCNA Contract Renewal Letter for Parsons Brinckerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/16757 )
+* [2014 CCNA Contract Renewal Letter for Parsons Brinckerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/16757){:target='_blank'}
