--- a/_posts/2014-09-05-0.md
+++ b/_posts/2014-09-05-0.md
@@ -6,4 +6,4 @@ badge_icon: exclamation
 
 * Direct Select Work Order Requested for Parson Brinckerhoff 
 * Hillsborough County Public Works Department requested the selection of Parsons Brinckerhoff from the list of CCNA contract providers to support the countywide transportation plan initiative. Four firms from CCNA contact were considered.
-* [Memo](http://www.hillsboroughcounty.org/DocumentCenter/View/16758)
+* [Memo](http://www.hillsboroughcounty.org/DocumentCenter/View/16758){:target='_blank'}
