--- a/_posts/2014-10-21-0.md
+++ b/_posts/2014-10-21-0.md
@@ -6,6 +6,6 @@ subtitle: TED PLG Workshop
 ---
 
 * Discussion on the TED process and stakeholder meetings, introduction of Parsons Brinkerhoff, and next scope of initiative and funding needs.
-* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/13545 )
-* [Stakeholder/Community presentation series listing](http://www.hillsboroughcounty.org/DocumentCenter/View/16767 )
-* [Watch video](http://65.49.32.144/Hillsborough/da6376ce-61e4-43b0-81f5-f91f73424e9d/Trans_Econ_Dev_WS_10_21_2014/presentation_file/mgpresenter.html?Stream=low )
+* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/13545){:target='_blank'}
+* [Stakeholder/Community presentation series listing](http://www.hillsboroughcounty.org/DocumentCenter/View/16767){:target='_blank'}
+* [Watch video](http://65.49.32.144/Hillsborough/da6376ce-61e4-43b0-81f5-f91f73424e9d/Trans_Econ_Dev_WS_10_21_2014/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
