--- a/_posts/2014-11-11-0.md
+++ b/_posts/2014-11-11-0.md
@@ -4,4 +4,4 @@ layout: post
 
 * Focus Groups Held on Public Engagement
 * A series of six focus groups is conducted by Frederick Polls on transportation initiative public engagement strategy
-* [Focus Group Findings –](http://www.hillsboroughcounty.org/DocumentCenter/View/16766 )
+* [Focus Group Findings –](http://www.hillsboroughcounty.org/DocumentCenter/View/16766){:target='_blank'}
