--- a/_posts/2015-01-14-0.md
+++ b/_posts/2015-01-14-0.md
@@ -6,6 +6,6 @@ subtitle: TED PLG Workshop
 ---
 
 * Discussion on feedback from stakeholders and presentation on FDOT express lane master plan. Parsons Brinckerhoff provides a technical work update and the outline for public engagement to include 28 public workshop meetings. PLG directs staff to add eight additional community workshop meetings.
-* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/14327 )
-* [Presentation – by George Walton, Parsons Brinckerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/14330)
-* [Watch video](http://65.49.32.144/Hillsborough/3057a3f2-a609-4545-8e27-afe290fdbaff/Trans_Econ_Dev_WS_1_14_2015/presentation_file/mgpresenter.html?Stream=low)
+* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/14327){:target='_blank'}
+* [Presentation – by George Walton, Parsons Brinckerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/14330){:target='_blank'}
+* [Watch video](http://65.49.32.144/Hillsborough/3057a3f2-a609-4545-8e27-afe290fdbaff/Trans_Econ_Dev_WS_1_14_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
