--- a/_posts/2015-03-05-0.md
+++ b/_posts/2015-03-05-0.md
@@ -7,6 +7,6 @@ subtitle: TED PLG Workshop
 
 Discussion on public engagement process and verbal report on proposed audit scope of work for public input.
 
-* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/14662 )
-* [Presentation – GO Hillsborough Community Workshop Series by George Walton, Parsons Brinckerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/14663 )
-* [Watch video](http://65.49.32.144/Hillsborough/1cdf6d18-6c62-4495-bdf4-b425ac26ed51/Trans_Econ_Dev_PG_CC_3_5_2015/presentation_file/mgpresenter.html?Stream=low )
+* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/14662){:target='_blank'}
+* [Presentation – GO Hillsborough Community Workshop Series by George Walton, Parsons Brinckerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/14663){:target='_blank'}
+* [Watch video](http://65.49.32.144/Hillsborough/1cdf6d18-6c62-4495-bdf4-b425ac26ed51/Trans_Econ_Dev_PG_CC_3_5_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
