--- a/_posts/2015-03-12-0.md
+++ b/_posts/2015-03-12-0.md
@@ -6,4 +6,4 @@ badge_icon: exclamation
 
 * County Auditor Completes Assessment of Parsons Brinckerhoff Procurement 
 * No material concerns were identified during a preliminary assessment by Hillsborough County Internal Auditor of the procurement of the services from Parsons Brinckerhoff. Citizen initiated complaint is closed with no recommendation for further review.
-* [Memo](http://www.hillsboroughcounty.org/DocumentCenter/View/16755)
+* [Memo](http://www.hillsboroughcounty.org/DocumentCenter/View/16755){:target='_blank'}
