--- a/_posts/2015-05-06-0.md
+++ b/_posts/2015-05-06-0.md
@@ -6,6 +6,6 @@ badge_icon: usd
 
 * Additional Funding for the Transportation Initiative Approved by BOCC
 * BOCC authorized a $47,500.00 work order revision for costs to support the additional public workshops requested by the PLG on January 14, 2015, increasing the Parsons Brinckerhoff work order to $998,136.63 (BOCC Agenda Item A-41).
-* [BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/585/05-06-15%20Recap%20Memo.pdf )
-* [Agenda Item](http://agenda.hillsboroughcounty.org/cache/00003/581/A-41.PDF )
-* [Work Order Revision #3](http://www.hillsboroughcounty.org/DocumentCenter/View/16765  )
+* [BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/585/05-06-15%20Recap%20Memo.pdf){:target='_blank'}
+* [Agenda Item](http://agenda.hillsboroughcounty.org/cache/00003/581/A-41.PDF){:target='_blank'}
+* [Work Order Revision #3](http://www.hillsboroughcounty.org/DocumentCenter/View/16765){:target='_blank'}
