--- a/_posts/2015-05-11-0.md
+++ b/_posts/2015-05-11-0.md
@@ -4,4 +4,4 @@ layout: post
 
 * County Auditor Phase I Report on GO Hillsborough Comment Methods
 * Hillsborough County Auditor preliminary testing and review on GO Hillsborough public comment methods determine majority of comments were recorded accurately and completely, with minor clerical errors corrected by Parsons Brinckerhoff.
-* [Memo](http://www.hillsboroughcounty.org/DocumentCenter/View/16803 )
+* [Memo](http://www.hillsboroughcounty.org/DocumentCenter/View/16803){:target='_blank'}
