--- a/_posts/2015-07-16-0.md
+++ b/_posts/2015-07-16-0.md
@@ -7,6 +7,6 @@ subtitle: TED PLG Workshop
 
 Discussion on Community Transportation Plan and continued Phase 2 community engagement to complete 10-year transportation project list to accompany proposed sale tax referendum, including 56 additional Project Specifics meetings at libraries. Hillsborough County Administrator discloses $325,000 will be required to complete Phase 2 community meetings, cost shared with Tampa Hillsborough Expressway Authority, Plant City, Temple Terrace and Tampa. Hillsborough County share of Phase 2 cost are within administrative approval authority and a work order is being developed for Parsons Brinckerhoff.
 
-* [Agenda](http://hillsboroughcounty.org/DocumentCenter/View/16189 )
-* [Presentation – Our Challenge, Our Choice by Bob Clifford, Parsons Brinkerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/16801 )
-* [Watch video](http://65.49.32.144/Hillsborough/217af75f-e379-4d64-8131-0c2ca8c602ff/TED%20Policy%20Group%2007%2016%202015/presentation_file/mgpresenter.html?Stream=low )
+* [Agenda](http://hillsboroughcounty.org/DocumentCenter/View/16189){:target='_blank'}
+* [Presentation – Our Challenge, Our Choice by Bob Clifford, Parsons Brinkerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/16801){:target='_blank'}
+* [Watch video](http://65.49.32.144/Hillsborough/217af75f-e379-4d64-8131-0c2ca8c602ff/TED%20Policy%20Group%2007%2016%202015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
