--- a/_posts/2015-08-07-0.md
+++ b/_posts/2015-08-07-0.md
@@ -6,4 +6,4 @@ badge_icon: usd
 
 * Second Parson Brinckerhoff Work Order Approved 
 * Work Order PWGC20150012 is administratively issued by the Hillsborough County Public Works Department for $234,613.43 for continued work by Parsons Brinckerhoff on the Phase 2 community engagement meetings.
-* [Work Order](http://www.hillsboroughcounty.org/DocumentCenter/View/16762  )
+* [Work Order](http://www.hillsboroughcounty.org/DocumentCenter/View/16762){:target='_blank'}
