--- a/_posts/2015-09-16-0.md
+++ b/_posts/2015-09-16-0.md
@@ -6,5 +6,5 @@ badge_icon: search
 
 * Hillsborough County Commissioners Request GO Hillsborough Audit
 * BOCC requested the Hillsborough County Internal Auditor to conduct an independent audit of the GO Hillsborough initiative, to include a procurement and process review of the initiative, and bring back a scope of work at the next Board meeting (Off Agenda Item).
-* [BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/628/09-16%20Recap%20Memo.pdf )
-* [Watch video](http://65.49.32.144/Hillsborough/3823ffb5-482b-4048-816e-33213a7eeddb/BOCC_Regular_Mtg_9_16_2015/presentation_file/mgpresenter.html?Stream=low )
+* [BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/628/09-16%20Recap%20Memo.pdf){:target='_blank'}
+* [Watch video](http://65.49.32.144/Hillsborough/3823ffb5-482b-4048-816e-33213a7eeddb/BOCC_Regular_Mtg_9_16_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
