--- a/_posts/2013-05-22-0.md
+++ b/_posts/2013-05-22-0.md
@@ -6,5 +6,5 @@ badge_icon: exclamation
 
 * TED Policy Leadership Group (PLG) Established
 * The PLG is established and comprised of Hillsborough County Commissioners; the mayors of Plant City, Tampa, and Temple Terrace; and the chair of Hillsborough Area Regional Transit Authority (HART).  
-* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/16808 )
-* [Watch video](http://65.49.32.144/Hillsborough/7253585a-c22d-4af8-a4c9-58111a6a7021/Econ_Econ_Policy_Group_Mtg_05_22_2013_PM/presentation_file/mgpresenter.html?Stream=low)
+* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/16808){:target='_blank'}
+* [Watch video](http://65.49.32.144/Hillsborough/7253585a-c22d-4af8-a4c9-58111a6a7021/Econ_Econ_Policy_Group_Mtg_05_22_2013_PM/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
