--- a/_posts/2013-08-06-0.md
+++ b/_posts/2013-08-06-0.md
@@ -7,4 +7,4 @@ subtitle: TED Community Conversation
 
 County Center
 
-* [Watch video](http://65.49.32.144/Hillsborough/77e71539-08b8-4532-89a2-cdae2391b278/Transportation_for_Economic_Dev_PF_08_06_2013/presentation_file/mgpresenter.html?Stream=low)
+* [Watch video](http://65.49.32.144/Hillsborough/77e71539-08b8-4532-89a2-cdae2391b278/Transportation_for_Economic_Dev_PF_08_06_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
