--- a/_posts/2013-08-14-0.md
+++ b/_posts/2013-08-14-0.md
@@ -6,5 +6,5 @@ subtitle: TED PLG Workshop
 ---
 
 * Discussion on cost-effective transportation investments to support job growth and public engagement philosophy. 
-* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/16807 )
-* [Watch video](http://65.49.32.144/Hillsborough/31b31d5b-6295-46e2-b46c-0bc1946edb54/Trans_Econ_Dev_WS_08_14_2013/presentation_file/mgpresenter.html?Stream=low )
+* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/16807){:target='_blank'}
+* [Watch video](http://65.49.32.144/Hillsborough/31b31d5b-6295-46e2-b46c-0bc1946edb54/Trans_Econ_Dev_WS_08_14_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
