--- a/_posts/2013-11-13-0.md
+++ b/_posts/2013-11-13-0.md
@@ -6,8 +6,8 @@ subtitle: TED PLG Workshop
 ---
 
 * Discussion on TED guiding principles and the interrelationship of transportation to key economic spaces.
-* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/9983 )
-* [Presentation](http://www.hillsboroughcounty.org/DocumentCenter/View/10039 )
-* [Handout – TED Optimization Strategies](http://www.hillsboroughcounty.org/ DocumentCenter/View/10038 )
-* [Presentation – Transit Development Plan by Phil Hale, HART CEO](http://www.hillsboroughcounty.org/DocumentCenter/View/10037)
-* [Watch video](http://65.49.32.144/Hillsborough/0d3b91e7-6801-497b-8fa7-5d4d3e289f7a/Trans_Econ_Dev_WS_11_13_2013/presentation_file/mgpresenter.html?Stream=low)
+* [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/9983){:target='_blank'}
+* [Presentation](http://www.hillsboroughcounty.org/DocumentCenter/View/10039){:target='_blank'}
+* [Handout – TED Optimization Strategies](http://www.hillsboroughcounty.org/ DocumentCenter/View/10038){:target='_blank'}
+* [Presentation – Transit Development Plan by Phil Hale, HART CEO](http://www.hillsboroughcounty.org/DocumentCenter/View/10037){:target='_blank'}
+* [Watch video](http://65.49.32.144/Hillsborough/0d3b91e7-6801-497b-8fa7-5d4d3e289f7a/Trans_Econ_Dev_WS_11_13_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
