--- a/_posts/2014-07-29-0.md
+++ b/_posts/2014-07-29-0.md
@@ -3,16 +3,16 @@ layout: post
 ---
 
 * TED Managers Meeting and Media Briefing held to update status of the effort.
-* [Memo](http://www.hillsboroughcounty.org/DocumentCenter/View/12649 )
+* [Memo](http://www.hillsboroughcounty.org/DocumentCenter/View/12649){:target='_blank'}
 * Draft Comprehensive Mobility Proposal materials
-* [General overview video](http://youtu.be/iWOmYreJfuo )
-* [Proposed projects video](http://youtu.be/0U5BU6VaI6Q )
-* [Proposed HART transit project report](http://www.hillsboroughcounty.org/DocumentCenter/View/12648 )
-* [Proposed non-transit projects](http://www.hillsboroughcounty.org/DocumentCenter/View/12644 )
-* [Governance proposal](http://www.hillsboroughcounty.org/DocumentCenter/View/12643 )
-* [Recommended public engagement presentation](http://www.hillsboroughcounty.org/DocumentCenter/View/12642 )
-* [Recommended communications framework](http://www.hillsboroughcounty.org/DocumentCenter/View/12645 )
-* [Transportation funding options](http://www.hillsboroughcounty.org/DocumentCenter/View/12646 )
-* [Key elements information for brochure](http://www.hillsboroughcounty.org/DocumentCenter/View/12647 )
-* [Report – Fixed Guideway Transit: An Estimate of Probable Costs](http://www.hillsboroughcounty.org/DocumentCenter/View/12668 )
-* [Report – Regional Organizational Models for Public Transportation](http://www.hillsboroughcounty.org/DocumentCenter/View/12679 )
+* [General overview video](http://youtu.be/iWOmYreJfuo){:target='_blank'}
+* [Proposed projects video](http://youtu.be/0U5BU6VaI6Q){:target='_blank'}
+* [Proposed HART transit project report](http://www.hillsboroughcounty.org/DocumentCenter/View/12648){:target='_blank'}
+* [Proposed non-transit projects](http://www.hillsboroughcounty.org/DocumentCenter/View/12644){:target='_blank'}
+* [Governance proposal](http://www.hillsboroughcounty.org/DocumentCenter/View/12643){:target='_blank'}
+* [Recommended public engagement presentation](http://www.hillsboroughcounty.org/DocumentCenter/View/12642){:target='_blank'}
+* [Recommended communications framework](http://www.hillsboroughcounty.org/DocumentCenter/View/12645){:target='_blank'}
+* [Transportation funding options](http://www.hillsboroughcounty.org/DocumentCenter/View/12646){:target='_blank'}
+* [Key elements information for brochure](http://www.hillsboroughcounty.org/DocumentCenter/View/12647){:target='_blank'}
+* [Report – Fixed Guideway Transit: An Estimate of Probable Costs](http://www.hillsboroughcounty.org/DocumentCenter/View/12668){:target='_blank'}
+* [Report – Regional Organizational Models for Public Transportation](http://www.hillsboroughcounty.org/DocumentCenter/View/12679){:target='_blank'}
