--- a/_posts/2015-02-18-0.md
+++ b/_posts/2015-02-18-0.md
@@ -4,6 +4,6 @@ layout: post
 
 * BOCC Requests Audit of Public Input
 * BOCC directed the Hillsborough County Internal Auditor and the Hillsborough County Clerk of Court’s Auditor to meet with Hillsborough County staff and bring back a proposed scope of work to audit public input to the GO Hillsborough initiative (BOCC Agenda Item F-3).
-* [BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/566/02-18%20Recap%20Memo.pdf )
-* [Agenda Item](http://agenda.hillsboroughcounty.org/cache/00003/564/F-3.PDF )
-* [Watch video](http://65.49.32.144/Hillsborough/2d9a10d8-57da-444b-997f-6d0be27d8df3/BOCC_Regular_Meeting_2_18_2015_AM/presentation_file/mgpresenter.html?Stream=low  )
+* [BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/566/02-18%20Recap%20Memo.pdf){:target='_blank'}
+* [Agenda Item](http://agenda.hillsboroughcounty.org/cache/00003/564/F-3.PDF){:target='_blank'}
+* [Watch video](http://65.49.32.144/Hillsborough/2d9a10d8-57da-444b-997f-6d0be27d8df3/BOCC_Regular_Meeting_2_18_2015_AM/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
