--- a/_posts/2014-03-26-0.md
+++ b/_posts/2014-03-26-0.md
@@ -13,3 +13,7 @@ subtitle: TED PLG Workshop
 * [Presentation - Update on Competitive Sites Process by Lucia Garsys, Hillsborough County](http://www.hillsboroughcounty.org/DocumentCenter/View/11354){:target='_blank'}
 * [Potential Project List for Key Economic Spaces](http://www.hillsboroughcounty.org/DocumentCenter/View/11353){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/2f4b11e1-7663-4185-81de-a6ae6de8d460/Trans_Econ_Dev_WS_3_26_2014/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
+
+<div class="embed-responsive embed-responsive-16by9">
+<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/NLZXrKSwYkM?rel=0" frameborder="0" allowfullscreen></iframe>
+</div>
