--- a/_posts/2015-02-12-0.md
+++ b/_posts/2015-02-12-0.md
@@ -12,3 +12,7 @@ Discussion on public participation process and meeting schedule. Parson Brincker
 * [Watch video](http://65.49.32.144/Hillsborough/0f7df348-3aa5-4076-a6d0-659871907e1e/Trans_Econ_Dev_PG_2_12_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
 <img src="{{ site.baseurl }}/images/gohills-logo.jpg" class="img-responsive center-block">
+
+<div class="embed-responsive embed-responsive-16by9">
+<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/bJVaJl66o8I?rel=0" frameborder="0" allowfullscreen></iframe>
+</div>
