--- a/_posts/2015-03-04-0.md
+++ b/_posts/2015-03-04-0.md
@@ -6,3 +6,7 @@ layout: post
 * BOCC receives a verbal report from Hillsborough County Internal Auditor and Hillsborough County Clerk of Court’s Audit Department proposing a scope of work for an audit of GO Hillsborough public input (BOCC Agenda Item G1).
 * [Agenda](http://agenda.hillsboroughcounty.org/cache/00003/567/03-04%20FINAL%20Agenda.pdf){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/82d63fc5-dae3-496a-9d05-555fdcdd04b0/BOCC_Regular_Meeting_3_4_2015_AM/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
+
+<div class="embed-responsive embed-responsive-16by9">
+<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/g4THEMnLwrc?rel=0" frameborder="0" allowfullscreen></iframe>
+</div>
