--- a/_posts/2015-09-16-0.md
+++ b/_posts/2015-09-16-0.md
@@ -8,3 +8,7 @@ badge_icon: search
 * BOCC requested the Hillsborough County Internal Auditor to conduct an independent audit of the GO Hillsborough initiative, to include a procurement and process review of the initiative, and bring back a scope of work at the next Board meeting (Off Agenda Item).
 * [BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/628/09-16%20Recap%20Memo.pdf){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/3823ffb5-482b-4048-816e-33213a7eeddb/BOCC_Regular_Mtg_9_16_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
+
+<div class="embed-responsive embed-responsive-16by9">
+<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/7sKytVp7P54?rel=0" frameborder="0" allowfullscreen></iframe>
+</div>
