--- a/_posts/2012-06-06-0.md
+++ b/_posts/2012-06-06-0.md
@@ -8,3 +8,7 @@ layout: post
 * [Agenda Item](http://agenda.hillsboroughcounty.org/cache/00003/241/B-1.PDF){:target='_blank'}
 * [2012 CCNA Contract Award Letter to Parsons Brinckerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/16756){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/6ee4479b-48a8-4cd2-a5ed-92d770d4a27c/BOCC_Reg_Mtg_06_06_2012_PM/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
+
+<div class="embed-responsive embed-responsive-16by9">
+<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/-o7W3ufP8mA?rel=0" frameborder="0" allowfullscreen></iframe>
+</div>
