--- a/_posts/2013-05-15-0.md
+++ b/_posts/2013-05-15-0.md
@@ -7,3 +7,7 @@ layout: post
 * [BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/363/05-15%20Recap%20Memo.pdf){:target='_blank'}
 * [Strategic Plan](http://www.hillsboroughcounty.org/index.aspx?nid=3070){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/eeba8991-744f-485e-983c-6dae8c4f6b00/BOCC_Reg_Mtg_05_15_2013_PM/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
+
+<div class="embed-responsive embed-responsive-16by9">
+<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/ctFgcjKGLhU?rel=0" frameborder="0" allowfullscreen></iframe>
+</div>
