--- a/_posts/2013-09-25-0.md
+++ b/_posts/2013-09-25-0.md
@@ -9,3 +9,7 @@ Discussion on perspectives of other organizations on transportation to support e
 
 * [Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/9035){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/c8ba149b-75d3-4a42-8244-2a7aee0eff70/Transportation__Economic_Dev_09_25_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
+
+<div class="embed-responsive embed-responsive-16by9">
+<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/JFfFyZTPSRc?rel=0" frameborder="0" allowfullscreen></iframe>
+</div>
