--- a/_posts/2014-02-26-0.md
+++ b/_posts/2014-02-26-0.md
@@ -10,3 +10,7 @@ subtitle: TED PLG Workshop
 * [Presentation - Review of Key Economic Spaces, clarification of FDOT/TBARTA “Spine,” and update on Competitive Sites Process by Mike Williams, Hillsborough County Transportation Planning and Development, and Jean Duncan, City of Tampa Transportation ](http://www.hillsboroughcounty.org/DocumentCenter/View/11194){:target='_blank'}
 * [Presentation - Legal Considerations for Governance by Chip Fletcher, Hillsborough County Attorney](http://www.hillsboroughcounty.org/DocumentCenter/View/11192){:target='_blank'}
 * [Presentation - Public Engagement Options by Eric Johnson, Hillsborough County Strategic Planning](http://65.49.32.144/Hillsborough/a6bda8fa-40d9-4aac-830b-8d5f0c88e888/Trans_Econ_Dev_WS_2_26_2014/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
+
+<div class="embed-responsive embed-responsive-16by9">
+<iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/pc3MK5uEa7I?rel=0" frameborder="0" allowfullscreen></iframe>
+</div>
