--- a/_posts/2015-04-22-0.md
+++ b/_posts/2015-04-22-0.md
@@ -8,7 +8,7 @@ subtitle: TED PLG Workshop
 Discussion on public engagement process and GO Hillsborough Issues and Opportunities report.
 
 * [Agenda](http://hillsboroughcounty.org/DocumentCenter/View/16190){:target='_blank'}
-* [Report](http://gohillsborough.org/wp-content/uploads/2015/04/GoHills_-IO-Report_4-10.pdf){:target='_blank'}
+* [Report](http://go.hillsboroughcdms.org/documents/helpful-info/GoHills_-IO-Report_4-10.pdf){:target='_blank'}
 * [Watch video](http://65.49.32.144/Hillsborough/53ceb82e-551d-4123-9734-6e36aeef8bc8/Trans_Econ_Dev_PG_4_22_2015A/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}
 
 <div class="embed-responsive embed-responsive-16by9">
