--- a/_posts/2015-08-17-0.md
+++ b/_posts/2015-08-17-0.md
@@ -4,4 +4,4 @@ layout: post
 
 * GO Hillsborough Announces One Percent Project Options
 * Announcement by GO Hillsborough that the Project Specifics community engagement meetings would present both one-half percent and one percent sales tax increase options.
-* [Media Release](http://gohillsborough.org/wp-content/uploads/2014/12/Release-re-second-round-of-meetings-final.pdf){:target='_blank'}
+* [Media Release](http://go.hillsboroughcdms.org/documents/helpful-info/Release-re-second-round-of-meetings-final.pdf){:target='_blank'}
