icon and title changes

--- a/_posts/2016-03-14-0.md
+++ b/_posts/2016-03-14-0.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-badge_icon: cogs
-badge_color: info
+badge_icon: exclamation
+badge_color: warning
 ---
 
 The Hillsborough County Sheriff’s Office and State Attorney’s Office released the final report on the GO Hillsborough procurement investigation concluding no evidence of criminal law violations or intentional public records violations.
