--- a/_posts/2016-04-13-0.md
+++ b/_posts/2016-04-13-0.md
@@ -6,9 +6,9 @@ badge_color: info
 
 The Board of County Commissioners completed the discussion from March 24 regarding mobility fees on new development as part of a funding strategy for the Community Transportation Plan.
 
-The Board of County Commissioners approved setting public hearings on April 26 for a Mobility Fee Ordinance, changes to the Impact Fee Ordinance, amendments to the Comprehensive Plan, and changes to the Land Development Code.
+The Board of County Commissioners approved setting [public hearings on April 26](http://www.hillsboroughcounty.org/Calendar.aspx?EID=14829) for a Mobility Fee Ordinance, changes to the Impact Fee Ordinance, amendments to the Comprehensive Plan, and changes to the Land Development Code.
 
-The Board of County Commissioners approved setting a public hearing on April 27 for a ½% Transportation System Sales Surtax Ordinance.
+The Board of County Commissioners approved setting a [public hearing on April 27](http://www.hillsboroughcounty.org/Calendar.aspx?EID=14830) for a ½% Transportation System Sales Surtax Ordinance.
 
 * [Agenda, background information, and presentations](http://agenda.hillsboroughcounty.org/cache/00003/685/April%2013%20Agenda.pdf)
 
