--- a/_posts/2016-04-20-0.md
+++ b/_posts/2016-04-20-0.md
@@ -5,3 +5,5 @@ badge_color: default
 ---
 
 [Proposed Planned Projects](http://hillsboroughcounty.org/DocumentCenter/View/18548) will be [presented to the Board of County Commissioners](http://www.hillsboroughcounty.org/Calendar.aspx?EID=10680) for approval as part of the ½% Discretionary Transportation System Sales Surtax Ordinance scheduled for [public hearing on April 27](http://www.hillsboroughcounty.org/Calendar.aspx?EID=14830).
+
+* [Presentation](http://hillsboroughcounty.org/DocumentCenter/View/18576)
