--- a/_posts/2016-04-20-0.md
+++ b/_posts/2016-04-20-0.md
@@ -4,6 +4,8 @@ badge_icon: calendar
 badge_color: default
 ---
 
-[Proposed Planned Projects](http://hillsboroughcounty.org/DocumentCenter/View/18548) will be [presented to the Board of County Commissioners](http://www.hillsboroughcounty.org/Calendar.aspx?EID=10680) for approval as part of the ½% Discretionary Transportation System Sales Surtax Ordinance scheduled for [public hearing on April 27](http://www.hillsboroughcounty.org/Calendar.aspx?EID=14830).
+The Board of County Commissioners approved proposed planned projects as part of the ½% Discretionary Transportation System Sales Surtax Ordinance scheduled for [public hearing on April 27](http://www.hillsboroughcounty.org/Calendar.aspx?EID=14830).
 
+* [Agenda](http://agenda.hillsboroughcounty.org/cache/00003/686/04-20%20FINAL%20Agenda.pdf)
+* [Proposed Planned Projects](http://hillsboroughcounty.org/DocumentCenter/View/18548)
 * [Presentation](http://hillsboroughcounty.org/DocumentCenter/View/18576)
